# NostalgiaBox

./: .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
nostalgiabox/: __init__.py  __main__.py  actions.py  app.py  channel.py  config.py  crt.py  overlay.py  player.py  playlist.py  probe.py  static_gen.py
nostalgiabox/assets/: README.md
nostalgiabox/input/: __init__.py  base.py  cec.py  keyboard.py  keymap.py  manager.py  stdin_backend.py
scripts/: install-service.sh  install.sh  nostalgiabox.service
tests/: helpers.py  test_app.py  test_channel.py  test_config.py  test_crt.py  test_keymap.py  test_overlay.py  test_playlist.py
